Feat(Backend and Frontend): Complete action features for each bot
